<resources>
    <string name="app_name">Finance Management App</string>
    <string name="manage_finance_text">Finances Made Easy</string>
    <string name="just_a_minute_text">With a simple app…</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="to_continue">To Continue…</string>
    <string name="continue_">Continue</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_ID">User ID</string>
    <string name="sign_in_term">By Signing In you are Accepting our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="amount">Amount</string>
    <string name="rupee_symbol">₹</string>
    <string name="profile">Profile</string>
    <string name="month">Month</string>
    <string name="month_col">Month :</string>
    <string name="monthly_expense">Monthly Expense</string>
    <string name="monthly_limit">Monthly Limit</string>
    <string name="monthly_limit_col">Monthly Limit :</string>
    <string name="total_balance">Total Balance You Have</string>
    <string name="old_limit">Old Limit</string>
    <string name="new_limit">New Limit</string>
    <string name="set_financials_text">Set your Financials</string>
    <string name="change_limit">Change Limit</string>
    <string name="spent">Spent</string>
    <string name="spent_col">Spent :</string>
    <string name="limit">Limit</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="finance_report">Finance Report</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_history">Transactions History</string>
    <string name="view_all">View All</string>
    <string name="add_your_transaction">Add Your Transaction</string>
    <string name="reason_optional">Reason (optional)</string>
    <string name="done">Done</string>
    <string name="add_fund">Add Fund</string>
    <string name="zero">00</string>
    <string name="cal">+/-</string>
    <string name="not_specified">Not Specified</string>
    <string name="date">Date:</string>
    <string name="date_structure">DD-MM-YYYY</string>
    <string name="hello_again">Hello Again!</string>
    <string name="we_have_missed">Welcome back you\'ve been missed!</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_screen">Forgot \nPassword?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="getting_started">Getting Started</string>
    <string name="forgot_password_text">Don\'t worry! It happens. We will send a email to rest your password. Please enter email associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="pass_con_pass_not_match">Password and Confirm Password are not matching*</string>
    <string name="verify_email">Verify your \nAccount</string>
    <string name="verify_email_text">To make sure it\'s your email address \nwe have sent verification link to \nemail</string>
    <string name="user_email_address">user_email_address</string>
    <string name="error_email_verify_text">Please click on the verification link sent to your \nemail address*</string>
    <string name="not_got_the_mail">Didn\'t get the email?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="unverified_account">Unverified \nAccount</string>
    <string name="unverified_account_warning">Unverified Account*</string>
    <string name="not_verified_email_text">We will send a verification link to \nemail, to confirm it\'s your email address</string>
    <string name="total_amount_text">Please enter total amount you have</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_amount_col">Total Amount :</string>
    <string name="save">Save</string>
    <string name="set_financials">Set Financials</string>
    <string name="please_enter_amount_text">Please enter total amount you have*</string>
    <string name="please_enter_limit_text">Please enter monthly spent limit*</string>

</resources>