<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ECFDFF"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="11sp"
                android:layout_marginEnd="3dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:id="@+id/date_text_main_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_structure"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/cal_text_main_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:id="@+id/rupee_text_main_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="3dp"
                android:paddingEnd="5dp"
                android:text="@string/rupee_symbol"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/amount_text_main_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/reason_text_main_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/not_specified"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>