<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false"
    tools:context=".screen.SignInEmail">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/hello_again"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/we_have_missed"
            android:textColor="@color/black"
            android:textSize="14sp" />

<!--        email-->
        <EditText
            android:id="@+id/email_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/sign_in_edit_text"
            android:drawableStart="@drawable/sign_in_edit_text_email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:paddingStart="13dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

<!--        password-->
        <EditText
            android:id="@+id/password_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:background="@drawable/sign_in_edit_text"
            android:drawableStart="@drawable/sign_in_edit_text_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="13dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            show password checkbox-->
            <CheckBox
                android:id="@+id/show_password_checkbox_sign_in_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/show_password"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            forgot password-->
            <TextView
                android:id="@+id/forgot_password_sign_in_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/light_blue"
                android:textSize="15sp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:id="@+id/sign_in_btn_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/next_button_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingTop="2dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!--    progressbar-->
    <ProgressBar
        android:id="@+id/progressBar_sign_in_email"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/light_blue"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_sign_in_email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:layout_marginEnd="2.5dp"/>

        <TextView
            android:id="@+id/create_account_sign_in_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/light_blue"
            android:layout_marginStart="2.5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>